--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="header">
@@ -17,14 +18,14 @@
             </ul>
         </div>
         <div class="header-content">
-            <div>
+            <div class="header-text">
                 <h1>This website is awesome</h1>
                 <p> This website has some subtext that goes here under the main title. It's a smaller font and the colour is a lower contrast.</p>
                 <img id="" src="" alt="">
                 <button class="sign-up">Sign up</button>
             </div>
-            <div>
-                <p class="placeholder">this is a placeholder for an image</p>
+            <div class="header-image">
+                <img src="images/zhang-liven-unsplash.jpg" alt="Picture of a yellow couch under a lamp. On the couch is a orange pillow and gray blanket.">
             </div>
         </div>
     </div>
@@ -33,19 +34,19 @@
         <ul>
             <li>
                 <p class="placeholder">Image</p>
-                <p>this is some subtext under an illustration or image</p>
+                <p class="description-text">this is some subtext under an illustration or image</p>
             </li>
             <li>
                 <p class="placeholder">Image</p>
-                <p>this is some subtext under an illustration or image</p>
+                <p class="description-text">this is some subtext under an illustration or image</p>
             </li>
             <li>
                 <p class="placeholder">Image</p>
-                <p>this is some subtext under an illustration or image</p>
+                <p class="description-text">this is some subtext under an illustration or image</p>
             </li>
             <li>
                 <p class="placeholder">Image</p>
-                <p>this is some subtext under an illustration or image</p>
+                <p class="description-text">this is some subtext under an illustration or image</p>
             </li>
         </ul>
     </div>
