Add more css styling, reformat some html divs

--- a/index.html
+++ b/index.html
@@ -24,35 +24,33 @@
                 <img id="" src="" alt="">
                 <button class="sign-up">Sign up</button>
             </div>
-            <div class="header-image">
-                <img src="images/zhang-liven-unsplash.jpg" alt="Picture of a yellow couch under a lamp. On the couch is a orange pillow and gray blanket.">
-            </div>
+            <div class="header-image">Image goes here</div>
         </div>
     </div>
     <div class="main-content">
         <h1>Some random information</h1>
         <ul>
             <li>
-                <p class="placeholder">Image</p>
+                <div class="placeholder"></div>
                 <p class="description-text">this is some subtext under an illustration or image</p>
             </li>
             <li>
-                <p class="placeholder">Image</p>
+                <div class="placeholder"></div>
                 <p class="description-text">this is some subtext under an illustration or image</p>
             </li>
             <li>
-                <p class="placeholder">Image</p>
+                <div class="placeholder"></div>
                 <p class="description-text">this is some subtext under an illustration or image</p>
             </li>
             <li>
-                <p class="placeholder">Image</p>
+                <div class="placeholder"></div>
                 <p class="description-text">this is some subtext under an illustration or image</p>
             </li>
         </ul>
     </div>
     <div class="testimonial">
-        <div class="testimonial-text">Blah Blah</div>
-        <div class="testimonial-speaker">- By Blah</div>
+        <div class="testimonial-text">This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+        <div class="testimonial-speaker">-Thor, God of Thunder</div>
     </div>
     <div class="call-to-action">
         <div class="highlight-bar">
